@@ -7,6 +7,7 @@ import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.Collections;
+import java.util.List;
 
 import static cz.fb.manaus.core.test.CoreTestFactory.newSettledBet;
 import static org.hamcrest.core.Is.is;
@@ -19,28 +20,28 @@ public class CounterBetCategorizerTest extends AbstractLocalTestCase {
 
     @Test
     public void testCategoryEq() throws Exception {
-        BetCoverage coverage = BetCoverage.from(Collections.singletonList(newSettledBet(2d, Side.BACK)));
+        BetCoverage coverage = BetCoverage.from(List.of(newSettledBet(2d, Side.BACK)));
         assertThat(categorizer.getCategories(newSettledBet(2d, Side.LAY), coverage),
                 is(Collections.singleton("counter_zero")));
     }
 
     @Test
     public void testCategoryGt() throws Exception {
-        BetCoverage coverage = BetCoverage.from(Collections.singletonList(newSettledBet(2.5d, Side.BACK)));
+        BetCoverage coverage = BetCoverage.from(List.of(newSettledBet(2.5d, Side.BACK)));
         assertThat(categorizer.getCategories(newSettledBet(2d, Side.LAY), coverage),
                 is(Collections.singleton("counter_profit")));
     }
 
     @Test
     public void testCategoryLt() throws Exception {
-        BetCoverage coverage = BetCoverage.from(Collections.singletonList(newSettledBet(1.5d, Side.BACK)));
+        BetCoverage coverage = BetCoverage.from(List.of(newSettledBet(1.5d, Side.BACK)));
         assertThat(categorizer.getCategories(newSettledBet(2d, Side.LAY), coverage),
                 is(Collections.singleton("counter_loss")));
     }
 
     @Test
     public void testCategoryNone() throws Exception {
-        BetCoverage coverage = BetCoverage.from(Collections.singletonList(newSettledBet(2d, Side.LAY)));
+        BetCoverage coverage = BetCoverage.from(List.of(newSettledBet(2d, Side.LAY)));
         assertThat(categorizer.getCategories(newSettledBet(2d, Side.LAY), coverage),
                 is(Collections.singleton("counter_none")));
     }
